tests/cases/errors/sema/member_on_non_class.hc
//@ error: `.` requires a class or union value
U0 Main()
{
  I64 x = 5;
  x.f;
}
